<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2015 Shaunak Gupte <gupte.shaunak@gmail.com>
  ~
  ~ This file is part of Finding Nemo.
  ~
  ~ Finding Nemo is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Finding Nemo is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Finding Nemo. If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/Card">

    <ImageView
        style="@style/CardText.Image"
        android:id="@+id/ivImage"
        android:contentDescription="@string/content_description_upload"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/textTakenOn"
            style="@style/CardText.Row" />
        <TextView
            android:id="@+id/tvTime"
            style="@style/CardText.Row" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/textTakenAt"
            style="@style/CardText.Row" />
        <TextView
            android:id="@+id/tvLocation"
            style="@style/CardText.Row" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/llComments">
        <TextView
            android:text="@string/textComment"
            style="@style/CardText" />
        <TextView
            android:id="@+id/tvComments"
            style="@style/CardText" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <Button
            android:onClick="edit"
            android:text="@string/butEdit"
            android:id="@+id/vEdit"
            style="@style/CardButton" />
        <Button
            style="@style/CardButton"
            android:onClick="retry"
            android:text="@string/butRetryFailed"
            android:id="@+id/vRetry"/>
        <Button
            style="@style/CardButton"
            android:onClick="delete"
            android:text="@string/butDelete"
            android:id="@+id/vDelete" />
    </LinearLayout>

</LinearLayout>