<!--
  ~ Copyright 2015 Shaunak Gupte <gupte.shaunak@gmail.com>
  ~
  ~ This file is part of Finding Nemo.
  ~
  ~ Finding Nemo is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Finding Nemo is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Finding Nemo. If not, see <http://www.gnu.org/licenses/>.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BackgroundLayout"
    tools:context="com.example.FindingNemo.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Card">
            <TextView
                android:text="@string/header_photo"
                style="@style/CardTitle"
                android:contentDescription="@string/content_description_upload"/>
            <ImageView
                style="@style/CardText.Image"
                android:id="@+id/ivImage" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Card">
            <TextView
                android:text="@string/header_location"
                style="@style/CardTitle" />
            <fragment
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                class="com.google.android.gms.maps.MapFragment"
                android:id="@+id/map"/>
            <TextView
                style="@style/CardText"
                android:id="@+id/tvLocation"/>
            <Button
                style="@style/CardButton"
                android:id="@+id/bChangeLocation"
                android:text="@string/button_change"
                android:onClick="changeLocation"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Card">
            <TextView
                android:text="@string/header_date_time"
                style="@style/CardTitle" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/text_date"
                    style="@style/CardText.Row"/>
                <TextView
                    style="@style/CardText.Row"
                    android:id="@+id/tvDate"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/text_time"
                    style="@style/CardText.Row"/>
                <TextView
                    style="@style/CardText.Row"
                    android:id="@+id/tvTime"/>
            </LinearLayout>

            <Button
                style="@style/CardButton"
                android:id="@+id/bChangeTime"
                android:text="@string/button_change"
                android:onClick="changeTime"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Card">
            <TextView
                android:text="@string/header_comments"
                style="@style/CardTitle" />
            <EditText
                style="@style/CardText"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="#00000000"
                android:inputType="textCapSentences|textAutoComplete"
                android:id="@+id/etComments"
                android:hint="@string/text_hint_comments"
                android:textColorHint="@color/hintText"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Card">
            <Button
                style="@style/CardButton"
                android:id="@+id/bRetry"
                android:text="@string/butUpload"
                android:onClick="upload"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>
